# fall-agentic-ai-healthcare-search

./: .gitignore  README.md  app.py  medical_data.csv  pyproject.toml  requirementsllm.txt
convo-history/: chroma.sqlite3
data_collection/: msd_content_fetcher.py  msd_link_fetcher.py  msd_subtopics.csv
data_collection/scripts/: build_knowledge_base.py  step1_clean_pdf.py
db/: ingestion.py
frontend/: app.js  index.html  styles.css
pipeline/: generator.py  main.py  retriever.py
pipeline/prompts/: rag_template.md  system.md
pipeline/tests/: test_integration.py  test_ollama_generator.py  test_prompts.py
src/: app.py  embeddings.py  vector_database.py
