[project]
name = "fall-agentic-ai-healthcare-search"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "langchain-text-splitters>=1.1.1",
    "pandas>=3.0.1",
    "playwright>=1.58.0",
    "pypdf>=6.7.5",
    "pytest>=9.0.2",
    "qdrant-client>=1.17.0",
    "requests>=2.32.5",
    "selectolax>=0.4.7",
    "sentence-transformers>=5.2.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
